fix: fixing bug with flex-end and scrollbar

--- a/src/components/MessagesContainer/styles.scss
+++ b/src/components/MessagesContainer/styles.scss
@@ -10,7 +10,6 @@
 
   display: flex;
   flex-direction: column-reverse;
-  justify-content: flex-end;
 
   &::-webkit-scrollbar {
     width: 14px;
@@ -19,7 +18,7 @@
     background: transparent;
   }
   &::-webkit-scrollbar-thumb {
-    border: 3px solid $color-white;
+    border: 3px solid $color-neutral-100;
     background: $color-neutral-600;
     border-radius: 8px;
   
@@ -36,7 +35,7 @@
     background-color: $color-neutral-950;
 
     &::-webkit-scrollbar-thumb {
-      border: 3px solid $color-neutral-900;
+      border: 3px solid $color-neutral-950;
       background: $color-neutral-700;
     }
     &::-webkit-scrollbar-thumb:hover {
@@ -49,6 +48,10 @@
     width: 100%;
     padding: .5rem;
     gap: .5rem;
+    
+    &:first-child {
+      margin-bottom: auto !important;
+    }
 
     > .user-icon {
       width: 2rem;
